# agentic-duo

./: .gitignore  ARCHITECTURE.md  DEMO.md  EXPLANATION.md  README.md  agentic-duo.code-workspace
demo_slide_decks/: agentic-duo.md  sample_slides.md  slides-introduction.md
src/backend/: .env.example  README.md  gemini_live_sample.py  gemini_live_transcription.py  main.py  package-lock.json  package.json  pyproject.toml
src/backend/playground/: gemini_live_sample.py  gemini_live_transcription.py  slide_deck_client.py
src/backend/src/slidekick/: __init__.py  audio_processor.py  config.py  content_processor.py  exceptions.py  slide_tools.py  state_manager.py  tool_executor.py
src/backend/tests/: test_audio_processor.py  test_integration.py  test_slide_tools.py  test_state_manager.py  test_tool_executor.py
src/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
src/frontend/public/: audio-processor.js  manifest.json
src/frontend/src/: App.css  App.tsx
src/frontend/src/components/: AudienceView.tsx  PresenterView.tsx  ProcessingView.tsx  ReadyView.tsx  Toast.tsx  UploadView.tsx
src/frontend/src/types/: websocket.ts
